# AI-Document-Assisatant

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  langgraph.json  pyproject.toml  test_stream_format.py
backend/alembic/: env.py
backend/alembic/versions/: 1913b4dced83_add_conversations_table_and_thread_id.py
backend/src/: __init__.py  health.py  main.py  monitoring.py
backend/src/conversations/: __init__.py  models.py  repository.py  routes.py
backend/src/ingestion_graph/: __init__.py  configuration.py  graph.py  state.py
backend/src/retrieval_graph/: __init__.py  configuration.py  graph.py  prompts.py  state.py  utils.py
backend/src/shared/: __init__.py  checkpointer.py  configuration.py  retrieval.py  state.py  utils.py
backend/tests/: __init__.py  test_main.py
backend/tests/conversations/: __init__.py  test_repository.py  test_routes.py
backend/tests/ingestion_graph/: __init__.py  test_graph.py  test_state.py
backend/tests/integration/: __init__.py  test_api_contracts.py  test_api_fastapi.py  test_document_isolation.py
backend/tests/performance/: __init__.py  test_benchmarks.py  test_load.py
backend/tests/retrieval_graph/: __init__.py  test_graph.py  test_prompts.py  test_state.py  test_utils.py
backend/tests/shared/: test_checkpointer.py  test_configuration.py  test_retrieval.py  test_state.py  test_utils.py
frontend/: .env.example  jest.setup.js  package.json
frontend/__tests__/api/ingest/: route.integration.test.ts
frontend/__tests__/components/: ConversationItem.test.tsx  ConversationSidebar.test.tsx
frontend/__tests__/contexts/: ConversationContext.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/conversations/: route.ts
frontend/app/api/conversations/[threadId]/: route.ts
frontend/app/api/conversations/[threadId]/history/: route.ts
frontend/app/api/conversations/[threadId]/restore/: route.ts
frontend/app/api/conversations/deleted/: route.ts
frontend/app/api/ingest/: route.ts
frontend/components/: chat-message.tsx  conversation-header.tsx  conversation-item.tsx  conversation-sidebar.tsx  deleted-conversation-item.tsx  file-preview.tsx  theme-toggle.tsx
frontend/components/ui/: drawer.tsx  toast.tsx
frontend/contexts/: ConversationContext.tsx  conversation-context.tsx
frontend/types/: conversation.ts
